test/Sema/copyable_conformance_diff_source_file.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

//// Ensure we cannot add the conformance in a different source file.

// RUN: %target-language-frontend \
// RUN:   -typecheck -verify \
// RUN:   %t/Visitor.code %t/GardenKit.code

//--- GardenKit.code

public struct Garden<Plant: ~Copyable>: ~Copyable {
  public immutable plant: Plant
  public init(_ p: consuming Plant) { plant = p }
}

//--- Visitor.code

// expected-error@+1 {{conformance to 'Copyable' must occur in the same source file as generic struct 'Garden'}}
extension Garden: Copyable where Plant: Copyable {}
